# Copyright (c) 2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

platform = "${current_os}_${current_cpu}"
if (platform == "mac_arm64") {
  mac_buildtool = "//build/toolchain/mac:clang_arm64"
} else if (platform == "mac_x64") {
  mac_buildtool = "//build/toolchain/mac:clang_x64"
}
windows_buildtool = "//build/toolchain/mingw:mingw_x86_64"
linux_buildtool = "//build/toolchain/linux:clang_x64"
ace_root = "//foundation/arkui/ace_engine"
flutter_root = "//third_party/flutter"
os_include_dirs = [
  "$ace_root",
  "$ace_root/adapter/preview/entrance",
  "$ace_root/frameworks",
  "$ace_root/frameworks/base/utils",
  "$ace_root/frameworks/core/event",
  "$flutter_root/engine",
  "$flutter_root/engine/flutter/shell/platform/common/cpp/public",
  "$flutter_root/engine/ace_adapter/flutter/shell/platform/glfw/public",
  "$ace_root/frameworks/core/common/clipboard",
  "$ace_root/adapter/preview/entrance/clipboard",
]